--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           node-version: ${{ matrix.node }} 
       - run: npm cli 
-      - run: npm run build --if-present
+      - run: npm run build --if-present ##
