--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,4 +15,4 @@ jobs:
          FIRST_NAME: Quetzalcoatl
          MIDDLE_NAME: Garcia
          LAST_NAME: Lagunas
-       run: echo $MY_VAR $FIRTS_NAME $MIDDLE_NAME $LAST_NAME
+       run: echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME
