--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,3 +19,8 @@ jobs:
      - name: my second job 
        if: success()
        run: echo "The previous job was successfully"
+     - name: my third step
+       uses: actions/checkout@v1
+       with:
+         node-version: 12
+         registry-url: https://npm.pkg.github.com/
