--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,5 @@
 name: build
-on: push
+on: pull_request
 jobs:
   build:
     name: my job
@@ -25,7 +25,7 @@ jobs:
          node-version: 12
          registry-url: https://npm.pkg.github.com/
      - name: my  fourth release 
-       uses: actions/first-interaction@master
+       uses: actions/first-interaction@v1
        with:
          repo-token: ${{ secrets.GITHUB_TOKEN }}
          issue-message: "this message will be dislayed on user firts issue"
