--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,6 @@
 # steps.yml
 name: steps
-on: push
+on: pull_request
 jobs:
   build:
     name: my job
@@ -17,7 +17,7 @@ jobs:
         MIDDLE_NAME: Michael
         LAST_NAME: Crowell
       run: |
-        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME $GITHUB_REPOSITORY.
     - name: My second step
       if: success()
       run: echo "The previous step has finished successfully"
